--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -5,15 +5,6 @@ on:
       aws-role-to-assume:
         required: true
         type: string
-    secrets:
-      github-token:
-        required: true
-      gradle-properties:
-        required: true
-      dais-machine-github-username:
-        required: true
-      dais-machine-github-email:
-        required: true
   workflow_dispatch:
 permissions:
   id-token: write
@@ -24,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.github-token }}
+          token: ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
           fetch-depth: 0
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -42,11 +33,11 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
       - name: Build with Gradle
         env:
-          GRADLE_PROPERTIES: ${{ secrets.gradle-properties }}
+          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
         shell: bash
         run: |
-          git config user.name ${{ secrets.dais-machine-github-username }}
-          git config user.email ${{ secrets.dais-machine-github-email }}
+          git config user.name ${{ secrets.DAIS_MACHINE_GITHUB_USERNAME }}
+          git config user.email ${{ secrets.DAIS_MACHINE_GITHUB_EMAIL }}
           mkdir -p ~/.gradle/
           echo "GRADLE_USER_HOME=${HOME}/.gradle" >> $GITHUB_ENV
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
