--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -5,8 +5,12 @@ on:
       aws-role-to-assume:
         required: true
         type: string
+      github-token:
+        required: true
+        type: string        
     secrets:
       DAIS_MACHINE_GITHUB_TOKEN:
+        description: 'GH PAT'
         required: true        
   workflow_dispatch:
 permissions:
@@ -18,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
+          token: ${{ inputs.github-token }}
           fetch-depth: 0
       - name: Set up JDK 11
         uses: actions/setup-java@v3
