--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -5,13 +5,9 @@ on:
       aws-role-to-assume:
         required: true
         type: string
+    secrets:
       github-token:
         required: true
-        type: string        
-    secrets:
-      DAIS_MACHINE_GITHUB_TOKEN:
-        description: 'GH PAT'
-        required: true        
   workflow_dispatch:
 permissions:
   id-token: write
@@ -22,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ inputs.github-token }}
+          token: ${{ secrets.github-token }}
           fetch-depth: 0
       - name: Set up JDK 11
         uses: actions/setup-java@v3
