--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -16,6 +16,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Build with Gradle
+        env:
+          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
+        shell: bash
+        run: |
+          echo ${{ secrets.GRADLE_PROPERTIES }}
+          echo ${{ secrets.github-token }}
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.github-token }}
