--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -14,6 +14,7 @@ permissions:
   contents: read
 jobs:
   build:
+    environment: dev
     runs-on: ubuntu-latest
     steps:
       - name: Build with Gradle
