--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -5,9 +5,6 @@ on:
       aws-role-to-assume:
         required: true
         type: string
-    secrets:
-      github-token:
-        required: true
   workflow_dispatch:
 permissions:
   id-token: write
@@ -23,10 +20,10 @@ jobs:
         shell: bash
         run: |
           echo ${{ secrets.GRADLE_PROPERTIES }}
-          echo ${{ secrets.github-token }}
+          echo ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.github-token }}
+          token: ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
           fetch-depth: 0
       - name: Set up JDK 11
         uses: actions/setup-java@v3
