--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
           FunctionName: spinnaker-trigger-dev-deployer
-          Payload: '{"application": "spinnaker-utils", "tag": "0.0.538", "gitLog": "Test log", "repositoryName": "service-spinnaker"}''
+          Payload: '{"application": "spinnaker-utils", "tag": "0.0.538", "gitLog": "Test log", "repositoryName": "service-spinnaker"}'
