--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -11,6 +11,7 @@ permissions:
   contents: read
 jobs:
   build:
+    if: github.actor != 'dais-machine'
     environment: dev
     runs-on: ubuntu-latest
     steps:
