--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,7 +18,7 @@ permissions:
   contents: read
 jobs:
   build:
-    if: github.actor != 'dais-machine'
+    if: github.triggering_actor != 'dais-machine'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
