--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
       aws-role-to-assume:
         required: true
         type: string
+      application:
+        required: true
+        type: string
   workflow_dispatch:
 permissions:
   id-token: write
@@ -23,12 +26,29 @@ jobs:
           role-to-assume: ${{ inputs.aws-role-to-assume }}
           aws-region: us-west-2
           role-session-name: AWSSession
+      - name: Push values.yaml to DAIS S3
+        id: push
+        run: |
+          projectName=$(python3 setup.py --name)
+          projectVersion=$(python3 setup.py --version)
+          cat values.yaml > values-${projectVersion}.yaml
+          echo 'image: ' >> values-${projectVersion}.yaml
+          echo '   repository: '991853876083.dkr.ecr.us-west-2.amazonaws.com/${projectName} >> values-${projectVersion}.yaml
+          echo '   pullPolicy: 'Always >> values-${projectName}.yaml
+          echo '   tag: '${projectVersion} >> values-${projectVersion}.yaml          
+          aws s3 cp values-${projectVersion}.yaml s3://dais-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
+          echo "::set-output name=projectVersion::$projectVersion"
+          echo "::set-output name=projectName=$projectName"
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
+          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
       - name: Deploy To Dev
-        id: foobar
+        id: deploy-to-dev
         uses: gagoar/invoke-aws-lambda@master
         with:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
           REGION: ${{ secrets.ACTIONS_AWS_REGION }}
           FunctionName: spinnaker-trigger-dev-deployer
-          Payload: '{"application": "spinnaker-utils", "tag": "0.0.538", "gitLog": "Test log", "repositoryName": "${{ github.repository }}"}'
+          Payload: '{"application": "${{ steps.push.projectName }}", "tag": "${{ steps.push.outputs.projectVersion }}", "gitLog": "${{ github.ref }}", "repositoryName": "${{ github.repository }}"}'
