--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,6 @@ permissions:
   contents: read
 jobs:
   build:
-    env:
-      gitLog: ${{ github.event.head_commit.message }}  
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -30,6 +28,7 @@ jobs:
         run: |
           projectName=$(python3 setup.py --name)
           projectVersion=$(python3 setup.py --version)
+          gitLog=$(git log -1 --pretty=%B)
           cat values.yaml > values-${projectVersion}.yaml
           echo 'image: ' >> values-${projectVersion}.yaml
           echo '   repository: '991853876083.dkr.ecr.us-west-2.amazonaws.com/${projectName} >> values-${projectVersion}.yaml
@@ -38,7 +37,7 @@ jobs:
           aws s3 cp values-${projectVersion}.yaml s3://dais-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
           echo "::set-output name=projectVersion::$projectVersion"
           echo "::set-output name=projectName::$projectName"
-          echo "::set-output name=gitLog::$projectName"
+          echo "::set-output name=gitLog::$gitLog"
         env:
           AWS_REGION: ${{ secrets.ACTIONS_AWS_REGION }}
       - name: Deploy To Dev
@@ -49,4 +48,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
           REGION: ${{ secrets.ACTIONS_AWS_REGION }}
           FunctionName: spinnaker-trigger-dev-deployer
-          Payload: '{"application": "${{ steps.push.outputs.projectName }}", "tag": "${{ steps.push.outputs.projectVersion }}", "gitLog": "${{ env.gitLog }}", "repositoryName": "${{ github.repository }}"}'
+          Payload: '{"application": "${{ steps.push.outputs.projectName }}", "tag": "${{ steps.push.outputs.projectVersion }}", "gitLog": "${{ steps.push.outputs.gitLog }}", "repositoryName": "${{ github.repository }}"}'
