--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
           projectName=$(python3 setup.py --name)
           projectVersion=$(python3 setup.py --version)
           gitLog=$(git log --pretty=format:%s)
+          gitLog=$(echo $gitLog)
           cat values.yaml > values-${projectVersion}.yaml
           echo 'image: ' >> values-${projectVersion}.yaml
           echo '   repository: '991853876083.dkr.ecr.us-west-2.amazonaws.com/${projectName} >> values-${projectVersion}.yaml
@@ -50,4 +51,6 @@ jobs:
           FunctionName: spinnaker-trigger-dev-deployer
           Payload: '{"application": "${{ steps.push.outputs.projectName }}", "tag": "${{ steps.push.outputs.projectVersion }}", "gitLog": "${{ steps.push.outputs.gitLog }}", "repositoryName": "${{ github.repository }}"}'
       - name: Store response payload to file
-        run: echo ${{ steps.deploy-to-dev.outputs.response }}
+        run: |
+          echo '${{ fromJSON(steps.deploy-to-dev.outputs.response).Payload }}' > invocation-response.json
+          cat invocation-response.json
