--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           role-to-assume: ${{ inputs.aws-role-to-assume }}
           aws-region: us-west-2
           role-session-name: AWSSession
-      - name: Push values.yaml to DAIS S3
+      - name: Push values.yaml to S3
         id: push
         run: |
           projectName=$(python3 setup.py --name)
@@ -35,6 +35,8 @@ jobs:
           echo '   pullPolicy: 'Always >> values-${projectName}.yaml
           echo '   tag: '${projectVersion} >> values-${projectVersion}.yaml          
           aws s3 cp values-${projectVersion}.yaml s3://dais-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
+          sed 's/all-dais-com-tls/all-dais-jm-com-tls/; s/dais.com/dais-jm.com/' values-${projectVersion}.yaml > values-${projectVersion}.yaml
+          aws s3 cp values-${projectVersion}.yaml s3://jm-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
           echo "::set-output name=projectVersion::$projectVersion"
           echo "::set-output name=projectName::$projectName"
           echo "::set-output name=gitLog::$gitLog"
