--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           echo '   pullPolicy: 'Always >> values-${projectName}.yaml
           echo '   tag: '${projectVersion} >> values-${projectVersion}.yaml
           aws s3 cp values-${projectVersion}.yaml s3://dais-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
-          sed 's/all-dais-com-tls/all-dais-jm-com-tls/; s/dais.com/dais-jm.com/' ./values-${projectVersion}.yaml > values-${projectVersion}.yaml
+          sed -i -e 's/all-dais-com-tls/all-dais-jm-com-tls/; s/dais.com/dais-jm.com/;' values-${projectVersion}.yaml
           aws s3 cp values-${projectVersion}.yaml s3://jm-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
           echo "::set-output name=projectVersion::$projectVersion"
           echo "::set-output name=projectName::$projectName"
