DEVOPS-3243 master branch exclude

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: deployment-test
 on:
+  push:
+    branches-ignore:    
+      - 'master'
   workflow_call:
     inputs:
       aws-role-to-assume:
