--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Cargo Build
         shell: bash
         run: |
+          gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           git config user.name ${{ secrets.dais-machine-github-username }}
           git config user.email ${{ secrets.dais-machine-github-email }}
           
@@ -75,3 +76,27 @@ jobs:
           git push --follow-tags
           docker tag $PROJECT_NAME ${{ inputs.aws-ecr-us-west-2-registry }}/$PROJECT_NAME:$nextVersion
           docker push ${{ inputs.aws-ecr-us-west-2-registry }}/$PROJECT_NAME:$nextVersion
+          echo "::set-output name=projectVersion::$PROJECT_NAME"
+          echo "::set-output name=projectName::$nextVersion"
+          echo "::set-output name=gitLog::$gitLog"
+      - name: Push values.yaml to DAIS s3
+        run: |
+          cat values.yaml > values-${{ steps.read_version.outputs.build-version }}.yaml
+          echo 'image: ' >> values-${{ steps.read_version.outputs.build-version }}.yaml
+          echo '   repository: '991853876083.dkr.ecr.us-west-2.amazonaws.com/${{ steps.read_project_name.outputs.rootProject-name }} >> values-${{ steps.read_version.outputs.build-version }}.yaml
+          echo '   pullPolicy: 'Always >> values-${{ steps.read_version.outputs.build-version }}.yaml
+          echo '   tag: '${{ steps.read_version.outputs.build-version }} >> values-${{ steps.read_version.outputs.build-version }}.yaml          
+          aws s3 cp values-${{ steps.read_version.outputs.build-version }}.yaml s3://dais-helm-charts/packagevalues/${{ steps.read_project_name.outputs.rootProject-name }}/values-${{ steps.read_version.outputs.build-version }}.yaml
+          sed -i -e 's/all-dais-com-tls/all-dais-jm-com-tls/; s/dais.com/dais-jm.com/;' values-${projectVersion}.yaml
+          aws s3 cp values-${projectVersion}.yaml s3://jm-helm-charts/packagevalues/${projectName}/values-${projectVersion}.yaml
+        with:
+          AWS_REGION: ${{ secrets.ACTIONS_AWS_REGION }}
+      - name: Deploy To Dev
+        id: deploy-to-dev
+        uses: gagoar/invoke-aws-lambda@master
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
+          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
+          FunctionName: spinnaker-trigger-dev-deployer
+          Payload: '{"application": "${{ steps.bash.outputs.projectName }}", "tag": "${{ steps.bash.outputs.projectVersion }}", "gitLog": "${{ steps.bash.outputs.gitLog }}", "repositoryName": "${{ github.repository }}"}'
