--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -16,25 +16,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.github-token }}
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
+          token: ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
       - uses: jfrog/setup-jfrog-cli@v2
         env:
-          JF_URL: ${{ secrets.jf-url }}
-          JF_USER: ${{ secrets.jf-user }}
-          JF_PASSWORD: ${{ secrets.jf-password }}
+          JF_URL: ${{ secrets.JF_URL }}
+          JF_USER: ${{ secrets.JF_USER }}
+          JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
       - run: |
           jf rt ping
       - name: Login
         uses: atlassian/gajira-login@master
         env:
-          JIRA_BASE_URL: ${{ secrets.jira-base-url }}
-          JIRA_USER_EMAIL: ${{ secrets.jira-user-email }}
-          JIRA_API_TOKEN: ${{ secrets.jira-api-token }}   
+          JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
+          JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
+          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}     
       - name: Find in commit messages
         uses: atlassian/gajira-find-issue-key@master
         with:
@@ -47,7 +42,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ inputs.aws-role-to-assum }}
+          role-to-assume: ${{ inputs.aws-role-to-assume }}
           aws-region: us-west-2
           role-session-name: AWSSession
       - name: Login to Amazon ECR
@@ -57,8 +52,8 @@ jobs:
       - name: Install Dependencies and Run Unit Tests
         id: npm-build
         run: |
-          git config user.name ${{ secrets.dais-machine-github-username }}
-          git config user.email ${{ secrets.dais-machine-github-email }}
+          git config user.name ${{ secrets.DAIS_MACHINE_GITHUB_USERNAME }}
+          git config user.email ${{ secrets.DAIS_MACHINE_GITHUB_EMAIL }}
           gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           npm ci --ignore-scripts
           npm run test
@@ -70,15 +65,15 @@ jobs:
           echo "::set-output name=projectName=$repositoryName"
           echo "::set-output name=gitLog::$gitLog"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm-token }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Build, tag, and push docker image to Amazon ECR     
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: ${{ steps.npm-build.outputs.projectName }} 
           VERSION: ${{ steps.npm-build.outputs.imageVersion }}       
         run: |
-          docker build -t ${{ inputs.aws-ecr-us-west-2-registry }}/$REPOSITORY:$VERSION --build-arg AWS_ACCESS_KEY_ID=${{ secrets.actions-aws-access-key-id }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.actions-aws-secret-access-key }} --build-arg NPM_TOKEN_READ=${{ secrets.npm-token }} --build-arg FORTAWESOME_TOKEN=${{ secrets.fontawesome-token }} --build-arg BIT_AUTH_TOKEN=${{ secrets.bit-auth-token }} .
-          docker push ${{ inputs.aws-ecr-us-west-2-registry }}/$REPOSITORY:$VERSION
+          docker build -t $REGISTRY/$REPOSITORY:$VERSION --build-arg AWS_ACCESS_KEY_ID=${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }} --build-arg NPM_TOKEN_READ=${{ secrets.NPM_TOKEN }} --build-arg FORTAWESOME_TOKEN=${{ secrets.FONTAWESOME_TOKEN }} --build-arg BIT_AUTH_TOKEN=${{ secrets.BIT_AUTH_TOKEN }} .
+          docker push $REGISTRY/$REPOSITORY:$VERSION          
       - name: Push values.yaml to DAIS S3
         run: |
           cat values.yaml > values-${VERSION}.yaml
