--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -66,7 +66,8 @@ jobs:
           echo "::set-output name=gitLog::$gitLog"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_TOKEN }}
+          FONTAWESOME_TOKEN: ${{ secrets.FONTAWESOME_TOKEN }}
+          BIT_AUTH_TOKEN: ${{ secrets.BIT_AUTH_TOKEN }}
       - name: Build, tag, and push docker image to Amazon ECR     
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
