--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -63,7 +63,7 @@ jobs:
           git push origin $default_branch --tags
           repositoryName=$(node -pe "require('./package.json').name")
           echo "::set-output name=imageVersion::$version"
-          echo "::set-output name=projectName=$repositoryName"
+          echo "::set-output name=projectName::$repositoryName"
           echo "::set-output name=gitLog::$gitLog"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
